some whitespace corrections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
     margin: 0 auto;
     font-family: 'Open Sans';
     font-weight: 200;
-    max-width: 1400px;
+    max-width: 1300px;
 }
 
 a {
@@ -33,7 +33,7 @@ a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1400px;
+  max-width: 1300px;
   margin: 0 auto;
   padding: 0 2rem;
   box-sizing: border-box;
@@ -133,7 +133,7 @@ a:hover {
     margin-right: 1rem;
     margin-top: 4rem;
     overflow-y: auto; /* makes gallery scrollable */
-    padding-left: 3rem;
+    padding-left: 1rem;
 }
 
 .detail-gallery picture {
@@ -158,6 +158,7 @@ a:hover {
   display: flex;
   margin: 0 auto;
   padding-top: 2rem;
+  padding-right: 1rem;
 }
 
 /* ABOUT PAGE */
@@ -195,8 +196,7 @@ a:hover {
     }
 
     .detail-gallery {
-        margin: 0;
-        margin-top: 1rem;
+        margin: 1rem;
         padding: 0;
         overflow: visible;
     }
